Fixed error in collapse menu

--- a/css/hamburger.css
+++ b/css/hamburger.css
@@ -1,7 +1,8 @@
 @media screen and (min-width: 0px) and (max-width: 700px) {
-    .logo {
-        position: relative;
-        margin: auto;
+    .navbar {
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
     .navbar .nav-items {
         display: inline-block;
@@ -12,18 +13,30 @@
         background-color: #0d1725;
         padding: 70px 20px 0px 20px;
     }
-    .fa-bars, .fa-times {
-        display: inline;
-    }
     #check-button {
-        display: inline;
         opacity: 0;
     }
-    #check-button:checked~.fa-bars, #check-button:not(:checked)~.fa-times, #check-button:checked~.logo {
+    #check-button, .fa-bars, .fa-times {
+        position: absolute;
+        display: inline;
+        margin: 20px;
+    }
+    #check-button:checked~.fa-bars, #check-button:not(:checked)~.fa-times, #check-button:checked~.navbar .logo {
         display: none;
     }
-    #check-button:checked~.nav-items {
+    #check-button:checked~.web-container {
+        opacity: 0.5 !important;
+        margin-top: -70px;
+        transition: 1s;
+    }
+    #check-button:checked~.navbar {
+        background: transparent !important;
+        box-shadow: none;
+        transition: 1s;
+    }
+    #check-button:checked~.navbar .nav-items {
         left: 0;
+        transition: 1s;
     }
     .logo-hamburger {
         display: block;
@@ -31,7 +44,7 @@
     }
     .navbar .nav-items hr {
         display: block;
-        margin: 20px -20px;
+        margin: 20px;
         border-top: .3px;
     }
     .navbar .nav-items li {
